# serializer version: 1
# name: test_diagnostics[no_schedule]
  dict({
    'model': dict({
      'firmware': '9.12',
      'max_programs': 3,
      'max_stations': 12,
      'model': '0005',
      'name': 'ESP-TM2',
    }),
    'options': dict({
      'duration': 6,
    }),
    'schedule': None,
    'state': dict({
      'active_zones': list([
      ]),
      'rain': False,
      'rain_delay': 0,
      'zones': list([
        1,
        2,
        3,
        4,
        5,
        6,
        7,
      ]),
    }),
  })
# ---
# name: test_diagnostics[schedule]
  dict({
    'model': dict({
      'firmware': '9.12',
      'max_programs': 3,
      'max_stations': 12,
      'model': '0005',
      'name': 'ESP-TM2',
    }),
    'options': dict({
      'duration': 6,
    }),
    'schedule': dict({
      'controller_info': dict({
        'rain_delay': 0,
        'rain_sensor': False,
        'station_delay': 0,
      }),
      'programs': list([
        dict({
          'days_of_week': list([
            'MONDAY',
            'TUESDAY',
          ]),
          'frequency': 'CUSTOM',
          'period': None,
          'program': 'PGM A',
          'starts': list([
            '04:00',
          ]),
          'synchro': 2,
          'zone_minutes': dict({
            'Zone 1': 25,
            'Zone 2': 20,
            'Zone 3': 7,
            'Zone 4': 20,
            'Zone 5': 10,
          }),
        }),
        dict({
          'days_of_week': list([
            'SUNDAY',
            'THURSDAY',
          ]),
          'frequency': 'CUSTOM',
          'period': None,
          'program': 'PGM B',
          'starts': list([
          ]),
          'synchro': 2,
          'zone_minutes': dict({
          }),
        }),
        dict({
          'days_of_week': list([
          ]),
          'frequency': 'CUSTOM',
          'period': None,
          'program': 'PGM C',
          'starts': list([
          ]),
          'synchro': 0,
          'zone_minutes': dict({
          }),
        }),
      ]),
      'zone_schedules': list([
      ]),
    }),
    'state': dict({
      'active_zones': list([
      ]),
      'rain': False,
      'rain_delay': 0,
      'zones': list([
        1,
        2,
        3,
        4,
        5,
        6,
        7,
      ]),
    }),
  })
# ---
